# eyantra-code

./: README.md
ebot_description/launch/: ebot_gazebo_task4c_launch.py
ebot_description/models/ebot/: ebot.gazebo
ebot_docking/: CMakeLists.txt
ebot_docking/scripts/: ebot_docking_boilerplate (PD Control).py  ebot_docking_boilerplate (error history).py  ebot_docking_boilerplate.py  ebot_docking_service.py
ebot_nav2/: CMakeLists.txt
ebot_nav2/config/: config.yaml  ekf (default).yaml  ekf.yaml  mapper_params_online_async.yaml  ukf (default).yaml  ukf.yaml
ebot_nav2/launch/: ebot_bringup_launch.py  ebot_nav2_brinup.launch (ukf).py  ebot_nav2_brinup.launch.py
ebot_nav2/maps/: map.data  map.pgm  map.yaml
ebot_nav2/models/ebot/: ebot_trolley.xacro
ebot_nav2/params/: nav2_params (default).yaml  nav2_params.yaml  nav2_params_filtered.yaml
ebot_nav2/scripts/: ComplementaryFilter.py  calldock.py  callpayload.py  checkimu.py  duplicate_imu.py  ebot_cmd.py  null_odom_data.json  pf_pose_saver.py  pose_detector.py  publisher.py  record_ebot.py  reset_sensors.py  vroom.py  vroom_without_arm.py
ebot_nav2/scripts/pyarmor_runtime_000000/: __init__.py
passing_service/: CMakeLists.txt  package.xml
passing_service/srv/: PassSW.srv
pymoveit2/: CMakeLists.txt
pymoveit2/examples/: detect.py  detect_csv.py  detect_filter1.py  detect_filter2.py  servo (old).py  servo.py
ur5_control/: setup.py
ur5_control/ur5_control/: aruco_detection.py  gotopose.py  ik.py  jointjog.py  passing_service.py  servoing.py  task2A.py  task3B.py
